# AAGEngine

./: README.md
Engine/: BackgroundMusic.cpp  BackgroundMusic.h  BackgroundShape.cpp  BackgroundShape.h  CMakeLists.txt  CMakeSettings.json  Character.cpp  Character.h  Checkbox.cpp  Checkbox.h  Collision.cpp  Collision.h  CollisionMap.cpp  CollisionMap.h  Dialog.cpp  Dialog.h  Dropdown.cpp  Dropdown.h  Game.cpp  Game.h  Image.cpp  Image.h  Information.cpp  Information.h  InformationImage.cpp  InformationImage.h  InputControl.cpp  InputControl.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  ItemMap.cpp  ItemMap.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Location.h  LogManager.cpp  (+46 more)
Example/: MainLevel.cpp  MainLevel.h  MyGame.cpp  MyGame.h  beginMap.cpp  beginMap.h  closedMap.cpp  closedMap.h  main.cpp  myPlayer.cpp  myPlayer.h  objectMapGame.cpp  objectMapGame.h  testMap.cpp  testMap.h
